# zpm

./: Cargo.toml  README.md  demo.tape
.github/workflows/: rust.yml
src/: download.rs  lib.rs  main.rs  models.rs  utils.rs
src/commands/: install.rs  install_zls.rs  list.rs  mod.rs  uninstall.rs  use_cmd.rs
