[package]
name = "zpm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.28", features = ["json", "native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"

[profile.release]
lto = true